# meal-tracker-web

./: .gitignore  README.md  docker-compose.yml
docs/: azure-deployment.md  ios-apple-registration.md  ios-auth.md  ios-sync-mapping.md
infra/azure/: main.bicep  parameters.example.json
libs/shared/: pyproject.toml
libs/shared/src/mealtracker_shared/: __init__.py  config.py  db.py  logging.py  schemas.py  security.py
scripts/: bind-custom-domains.sh  build-and-push.sh  deploy-azure.sh  finish-locales.py  generate-locales.py  smoke-test-auth.sh  smoke-test-meal-sync.sh  test_full_sync.sh
services/api-gateway/: Dockerfile  requirements.txt
services/api-gateway/app/: config.py  main.py
services/auth-service/: Dockerfile  requirements.txt
services/auth-service/alembic/: env.py
services/auth-service/app/: account_deletion.py  activity.py  admin_access.py  apple_client_secret.py  config.py  deps.py  email_send.py  login_security.py  main.py  models.py  oauth_verify.py  password_reset.py  passwords.py  routes_account.py  routes_activity.py  routes_admin.py  routes_local.py  routes_oauth.py
services/meal-service/: Dockerfile  requirements.txt
services/meal-service/alembic/: env.py
services/meal-service/app/: config.py  deps.py  main.py  models.py  routes_meals.py  routes_photos.py  routes_sync.py
services/nutrition-service/: Dockerfile  requirements.txt
services/nutrition-service/app/: config.py  deps.py  main.py  models.py  routes_lookup.py  seed.py
services/vision-service/: Dockerfile  requirements.txt
services/web-frontend/: Dockerfile  nginx.conf
(+69 files in other folders)
