[project]
name = "mealtracker-shared"
version = "0.1.0"
description = "Shared utilities (JWT, DB base, schemas) for MealTracker microservices."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic[email]>=2.9.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
